[package]
name = "tecpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = { version = "0.11.1", features = ["std"] }
anyhow = "1.0.81"
argh = "0.1.12"
argon2 = { version = "0.5.3", features = ["std"] }
crossterm = "0.27.0"
crypto-common = "0.1.6"
csv = "1.3.0"
rand = "0.8.5"
ratatui = "0.26.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sha3 = "0.10.8"
thiserror = "1.0.60"
unicode-width = "0.1.13"
wl-clipboard-rs = "0.9.0"
